<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="RecipeAxisLinear2Pos_t" Id="{d2ed1bb6-1652-4dc7-ab10-3b29c78e467b}">
    <Declaration><![CDATA[TYPE RecipeAxisLinear2Pos_t :
STRUCT
    rPosIn     : REAL;
    rPosOut    : REAL;
    rVeloToOut : REAL;
    rVeloToIn  : REAL;
    rAccel     : REAL;
    rDecel     : REAL;
    rJerk      : REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>