<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="Recipe_21_101_t" Id="{44f7e314-df6d-4947-97da-ae80be0f8d1d}">
    <Declaration><![CDATA[// Recipe for the 21.101 machine
TYPE Recipe_21_101_t :
STRUCT
	st110 : ST110_Recipe_t;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>